<resources>
    <string name="app_name">Chase Me</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username">Username</string>
    <string name="start">Start !</string>
    <string name="score">Score</string>

    <string name="Leaderboard">Leaderboard</string>
    <string name="Settings">Settings</string>
    <string name="Quit">Quit</string>

    <string name="Save">Save</string>
    <string name="danger">Danger</string>
    <string name="prey">Prey</string>
    <string name="hunter">Hunter</string>
</resources>